import-yaml-test/tomcat-Deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  annotations:
    alpha.image.policy.openshift.io/resolve-names: '*'
    deployment.kubernetes.io/revision: '1'
    image.openshift.io/triggers: >-
      [{"from":{"kind":"ImageStreamTag","name":"tomcat-image:latest"},"fieldPath":"spec.template.spec.containers[?(@.name==\"tomcat-image\")].image"}]
    openshift.io/generated-by: OpenShiftWebConsole
  name: tomcat-continer
  namespace: source-test
  labels:
    app: tomcat-container
    app.kubernetes.io/component: tomcat-container
    app.kubernetes.io/instance: tomcat-container
    app.kubernetes.io/name: tomcat
    app.kubernetes.io/part-of: tomcat-container-app
    app.openshift.io/runtime: java
    app.openshift.io/runtime-version: '1.8.0_262'
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tomcat-container
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: tomcat-container
        deploymentconfig: tomcat-container
    spec:
      containers:
        - name: tomcat-container
          image: >-
            image-registry.openshift-image-registry.svc:5000/source-test/tomcat-image@sha256:a09effab345b0743064c1afd02432f04e6b0888053b061df3283416cd9d39f62
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8443
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
